--- a/Todo
+++ b/Todo
@@ -1,3 +1,8 @@
 Todo
 
-Add click handlers to each element of the SVG (no idea how?)
++ Add click handlers to each element of the SVG (no idea how?)
+
+- Generate a random sequence of colours for the initial sequence
+- Use random sequence to display highlights
+- Use an index to track which is the expected colour to wait for
+- Verify the correct colour was chosen
